# Reference-Mismatch-MI-Net

./: KNOWN_LIMITATIONS.md  LICENSE  README.md  audit_cz_channel.py  experiments.py  loader.py  models.py  preprocessing.py  pyproject.toml  reference_ops.py  requirements.txt  standardization.py  test_experiments.py  training.py
artifacts/channel_maps/: channel_artifact_summary_v2.json  cho2017_channel_names.json  cho2017_positions_moabb.csv  cho2017_positions_standard_1005.csv  dreyer2023_channel_names.json  dreyer2023_positions_standard_1005.csv  iv2a_channel_names.json  iv2a_positions_moabb.csv  iv2a_positions_standard_1005.csv  openbmi_channel_names.json  openbmi_positions_moabb.csv  openbmi_positions_standard_1005.csv
artifacts/graphs/: cho2017_bipolar_nearest.json  cho2017_laplacian_knn4.json  dreyer2023_bipolar_nearest.json  dreyer2023_laplacian_knn4.json  iv2a_bipolar_nearest.json  iv2a_laplacian_knn4.json  openbmi_bipolar_nearest.json  openbmi_laplacian_knn4.json
configs/: paper.yaml  reference_ops.yaml  seeds.yaml  standardization.yaml
refshift/: __init__.py  analysis.py  compat.py  data.py  dl.py  env.py  experiments.py  jitter.py  mismatch.py  pipelines.py  plotting.py  reference.py
scripts/: build_cache.py  calibrate.py  calibrate_csp_lda.py  inspect_specs.py  kaggle_example_commands.md  kaggle_setup_notes.md  rebuild_graphs.py  run_benchmark.py  run_controls.py  run_csp_lda.py  run_jitter.py  run_lofo.py  run_mismatch_iv2a_csp_lda.py  run_ssl.py
specs/: output_schema.yaml  paper.yaml  reference_ops.yaml  seeds.yaml  standardization.yaml
specs/datasets/: cho2017.yaml  dreyer2023.yaml  iv2a.yaml  openbmi.yaml
src/refshift/: specs.py
src/refshift/baselines/: csp_lda.py
src/refshift/datasets/: base.py  cho2017.py  dreyer2023.py  iv2a.py  openbmi.py  registry.py
src/refshift/experiments/: benchmark.py  common.py  controls.py  jitter.py  lofo.py  ssl_loso.py
src/refshift/models/: atcnet.py  heads.py  wrappers.py
tests/: test_analysis.py  test_cache.py  test_chunk4.py  test_compat.py  test_dl.py  test_env.py  test_experiments.py  test_graph_artifacts.py  test_integration.py  test_jitter.py  test_loader.py  test_preprocessing.py  test_reference.py  test_reference_ops.py  test_refs_and_std.py  test_v011_fixes.py  test_wilcoxon.py
(+9 files in other folders)
