[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "refshift"
version = "0.2.0"
description = "Reference-shift experiments for motor-imagery EEG decoding."
requires-python = ">=3.10"
dependencies = [
    # Pinned for reproducibility of the 65.99% IV-2a CSP+LDA calibration
    # (see scripts/calibrate_csp_lda.py). Loosen only after re-verifying
    # the calibration target on a newer MOABB version.
    "moabb==1.5.0",
    "mne>=1.5",
    "pyriemann>=0.5",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "tqdm>=4.60",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
# Phase 2 deps; not needed for CSP+LDA calibration or the CSP+LDA mismatch
# matrix. Install with `pip install -e '.[dl]'` once Phase 2 work starts.
dl = [
    "braindecode>=0.8",
    "torch>=2.0",
    "skorch>=0.15",
]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["refshift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
