[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "refshift"
version = "0.13.2"
description = "Reference-shift experiments for motor-imagery EEG decoding."
requires-python = ">=3.10"
dependencies = [
    # Pinned for reproducibility of the 65.99% IV-2a CSP+LDA calibration
    # (see scripts/calibrate_csp_lda.py). Loosen only after re-verifying
    # the calibration target on a newer MOABB version.
    "moabb==1.5.0",
    "mne>=1.5",
    "pyriemann>=0.5",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "tqdm>=4.60",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
# Phase 2 DL dependencies. Install with `pip install -e '.[dl]'`.
# Targets the braindecode 1.x API (`n_chans`/`n_outputs`/`n_times` model
# parameters). If Kaggle's default resolves an older braindecode, pin
# explicitly with `pip install 'braindecode>=1.0'`.
dl = [
    "braindecode>=1.0",
    "torch>=2.0",
    "skorch>=0.15",
]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["refshift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
